testsuite/tests/typecheck/should_fail/T15883d.stderr

T15883d.hs:14:1: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘showsPrec’
      prevents the constraint ‘(Show a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      These potential instances exist:
        instance Show Ordering -- Defined in ‘GHC.Show’
        instance Show (Foo LiftedRep) -- Defined at T15883d.hs:14:1
        instance Show a => Show (Maybe a) -- Defined in ‘GHC.Show’
        ...plus 28 others
        ...plus 9 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the second argument of ‘(.)’, namely ‘(showsPrec 11 b1)’
      In the second argument of ‘showParen’, namely
        ‘((.) (showString "MkFoo ") (showsPrec 11 b1))’
      In the expression:
        showParen (a >= 11) ((.) (showString "MkFoo ") (showsPrec 11 b1))
      When typechecking the code for ‘showsPrec’
        in a derived instance for ‘Show (Foo LiftedRep)’:
        To see the code I am typechecking, use -ddump-deriv
